--- a/Baekjoon/5. DFS와 BFS.md
+++ b/Baekjoon/5. DFS와 BFS.md
@@ -1,5 +1,13 @@
-package com.baekjoon;
+# Algorithm
 
+### DFS와 BFS
+
+> 문제 링크 : https://www.acmicpc.net/problem/1260
+
+
+###### 풀이
+
+~~~java
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.util.Arrays;
@@ -105,3 +113,5 @@ public class bj1260_DFSAndBFS_엄재웅 {
 		}
 	}
 }
+~~~
+
