--- a/Baekjoon/1. 탑.md
+++ b/Baekjoon/1. 탑.md
@@ -6,6 +6,31 @@
 
 
 
+ * 단순 이중 for문으로는 시간초과
+ * Stack을 이용하여 해결하여야 한다
+ 
+
+1. 탑 개수(N) 입력 받기
+
+2. 검사를 위한 Stack 생성
+
+3. 탑의 높이를 하나씩 입력 받으면서 검사
+
+4. stack이 안 비었을 때
+
+5. input <= top 일 때
+
+   1. 해당 Idx 출력 후
+      - input값과 input idx를 push후 반복문 탈출
+
+   2. input > top 일 때
+      - top pop
+
+   3. stack이 비었을 때
+      * 1.0을 출력하고 현재 입력값과 idx push
+
+
+
 ###### 풀이
 
 ~~~java
@@ -13,23 +38,9 @@ import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.util.Stack;
 
-/* TODO
- * 1. 탑 개수(N) 입력 받기
- * 2. 검사를 위한 Stack 생성
- * 3. 탑의 높이를 하나씩 입력 받으면서 검사
- *    1. stack이 안 비었을 때
- *      1. input <= top 일 때
- *        1. 해당 Idx 출력 후
- *        2. input값과 input idx를 push후 반복문 탈출
- *      2. input > top 일 때
- *        1. top pop
- *    2. stack이 비었을 때
- *      1.0을 출력하고 현재 입력값과 idx push
- */
-
 /*
- * 단순 이중 for문으로는 시간초과
- * Stack을 이용하여 해결하여야 한다
+ * 2493. 탑
+ * JAVA_서울_6반_엄재웅
  */
 
 class bj2493_Tower_엄재웅 {
