--- a/Baekjoon/42. 블랙잭.md
+++ b/Baekjoon/42. 블랙잭.md
@@ -25,7 +25,7 @@ import java.util.Scanner;
  * JAVA_서울_6반_엄재웅
  */
 
-public class Solution {
+public class Main {
 	private static int N, M, min;
 	private static int[] input, number;
 	private static boolean[] selected;
