Add Solving Algorithm Problem about 직사각형 네개의 합집합의 면적 구하기

--- a/Baekjoon/40. 직사각형 네개의 합집합의 면적 구하기.md
+++ b/Baekjoon/40. 직사각형 네개의 합집합의 면적 구하기.md
@@ -29,7 +29,7 @@ import java.util.StringTokenizer;
  * JAVA_서울_6반_엄재웅
  */
 
-public class Solution {
+public class Main {
 	public static void main(String[] args) throws Exception {
 		BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
 		boolean[][] coordinate = new boolean[100][100]; 
