Add Solving Algorithm Problem about 딱지놀이

--- a/Baekjoon/39. 딱지놀이.md
+++ b/Baekjoon/39. 딱지놀이.md
@@ -35,7 +35,7 @@ import java.util.StringTokenizer;
  * JAVA_서울_6반_엄재웅
  */
 
-public class Solution {
+public class Main {
 	// 별, 동그라미, 네모, 세모 1,2,3,4
 	public static void main(String[] args) throws Exception {
 		BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
