Modify Solving Algorithm Problem about 나머지

--- a/Baekjoon/35. 나머지.md
+++ b/Baekjoon/35. 나머지.md
@@ -26,7 +26,7 @@ import java.util.Scanner;
  * JAVA_서울_6반_엄재웅
  */
 
-public class Solution {
+public class Main {
 	public static void main(String[] args) {
 		Scanner sc = new Scanner(System.in);
 		int[] arr = new int[10];
