--- a/Baekjoon/34. OX퀴즈.md
+++ b/Baekjoon/34. OX퀴즈.md
@@ -27,7 +27,7 @@ import java.io.InputStreamReader;
  * JAVA_서울_6반_엄재웅
  */
 
-public class Solution {
+public class Main {
 	public static void main(String[] args) throws Exception {
 		BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
 		StringBuilder sb = new StringBuilder();
