--- a/Baekjoon/33. 빙하.md
+++ b/Baekjoon/33. 빙하.md
@@ -37,7 +37,7 @@ import java.util.StringTokenizer;
  * JAVA_서울_6반_엄재웅
  */
 
-public class Solution {
+public class Main {
 	private static int N, M, result;
 	private static int[][] ground, dir = {
 			{-1, 0}, {1, 0}, {0, -1}, {0, 1}
