--- a/Baekjoon/32. 로봇 청소기.md
+++ b/Baekjoon/32. 로봇 청소기.md
@@ -35,7 +35,7 @@ import java.util.StringTokenizer;
  * JAVA_서울_6반_엄재웅
  */
 
-public class Solution {
+public class Main {
 	private static int N, M, result;
 	// 북 동 남 서
 	private static int[][] dir = {{0, -1}, {1, 0}, {0, 1}, {-1, 0}};
