Modify Solving Algorithm Problem about 스타트링크

--- a/Baekjoon/31. 스타트링크.md
+++ b/Baekjoon/31. 스타트링크.md
@@ -19,8 +19,9 @@
    D: 아래로 D층을 감
 
 2. 올라가는 경우와 내려가는 경우로 나눠서 bfs 탐색을 실시
-   - 방문 체크를 해야 도달할 수 없는 경우 무한루프를 돌지 않게 된다
-
+   
+- 방문 체크를 해야 도달할 수 없는 경우 무한루프를 돌지 않게 된다
+   
 3. 결과가 MAX_VALUE면 use the stairs, 아니면 결과값을 출력
 
 
@@ -38,7 +39,7 @@ import java.util.Scanner;
  * JAVA_서울_6반_엄재웅
  */
 
-public class Solution {
+public class Main {
 	private static int F, S, G, U, D, result;
 	
 	public static void main(String[] args) {
