Modify Solving Algorithm Problem about 토마토 3차원

--- a/Baekjoon/30. 토마토 3차원.md
+++ b/Baekjoon/30. 토마토 3차원.md
@@ -21,8 +21,6 @@
 ###### 풀이
 
 ~~~java
-package com.study;
-
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.util.LinkedList;
@@ -34,7 +32,7 @@ import java.util.StringTokenizer;
  * JAVA_서울_6반_엄재웅
  */
 
-public class Solution {
+public class Main {
 	private static int M, N, H, result;
 	private static int[][][] box;
 	// 위 아래 왼쪽 오른쪽 앞 뒤
