Modify Solving Algorithm Problem about 벽 부수고 이동하기

--- a/Baekjoon/29. 벽 부수고 이동하기.md
+++ b/Baekjoon/29. 벽 부수고 이동하기.md
@@ -20,8 +20,6 @@
 ###### 풀이
 
 ~~~java
-package com.algorithm_0826;
-
 import java.util.LinkedList;
 import java.util.Queue;
 import java.util.Scanner;
@@ -31,7 +29,7 @@ import java.util.Scanner;
  * JAVA_서울_6반_엄재웅
  */
 
-public class bj2206_CrashWallAndMove_엄재웅 {
+public class Main {
 	static int[] dx = {1, -1, 0, 0};
 	static int[] dy = {0, 0, 1, -1};
 	
