Modify Solving Algorithm Problem about 경비원

--- a/Baekjoon/28. 경비원.md
+++ b/Baekjoon/28. 경비원.md
@@ -30,7 +30,7 @@ import java.util.StringTokenizer;
  * JAVA_서울_6반_엄재웅
  */
 
-public class Solution {
+public class Main {
 	public static void main(String[] args) throws Exception {
 		BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
 		StringTokenizer st = new StringTokenizer(br.readLine(), " ");
