--- a/Baekjoon/27. 색종이.md
+++ b/Baekjoon/27. 색종이.md
@@ -27,7 +27,7 @@ import java.util.StringTokenizer;
  * JAVA_서울_6반_엄재웅
  */
 
-public class Solution {
+public class Main {
 	public static void main(String[] args) throws Exception {
 		BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
 		int[][] paper = new int[100][100];			// 도화지
