--- a/Baekjoon/26. 맥주 마시면서 걸어가기.md
+++ b/Baekjoon/26. 맥주 마시면서 걸어가기.md
@@ -28,7 +28,7 @@ import java.util.StringTokenizer;
  * JAVA_서울_6반_엄재웅
  */
 
-public class Solution {
+public class Main {
 	private static boolean[] visited;
 	private static ArrayList<int[]> node;
 	private static int N;
