Modify Solving Algorithm Problem about 빙고

--- a/Baekjoon/25. 빙고.md
+++ b/Baekjoon/25. 빙고.md
@@ -25,7 +25,7 @@ import java.util.Scanner;
  * JAVA_서울_6반_엄재웅
  */
 
-public class Solution {
+public class Main {
 	private static int[][] bingo;
 
 	public static void main(String[] args) {
