--- a/Baekjoon/53. 종이자르기.md
+++ b/Baekjoon/53. 종이자르기.md
@@ -1,8 +1,8 @@
 # Algorithm
 
-### 크로아티아 알파벳
+### 종이자르기
 
-> 문제 링크 : https://www.acmicpc.net/problem/2941
+> 문제 링크 : https://www.acmicpc.net/problem/2628
 
 
 
