--- a/Baekjoon/24. 파이프 옮기기1.md
+++ b/Baekjoon/24. 파이프 옮기기1.md
@@ -61,7 +61,7 @@ import java.util.StringTokenizer;
  * JAVA_서울_6반_엄재웅
  */
 
-public class bj17070_MovePipe_엄재웅 {
+public class Main {
 	private static int N;
 	private static int[][] ground;
 	private static int[][][] dp;
