--- a/Baekjoon/23. 1로 만들기.md
+++ b/Baekjoon/23. 1로 만들기.md
@@ -31,7 +31,7 @@ import java.util.Scanner;
  * 3로 나누어 떨어지면 i / 3 위치의 수식 횟수 값에 + 1
  */
 
-public class Solution {
+public class Main {
 	public static void main(String[] args) {
 		Scanner sc = new Scanner(System.in);
 		int N = sc.nextInt();
