Modify Solving Algorithm Problem about 줄세우기

--- a/Baekjoon/22. 줄 세우기.md
+++ b/Baekjoon/22. 줄 세우기.md
@@ -14,8 +14,6 @@
 ###### 풀이
 
 ~~~java
-package com.algorithm.problem;
-
 import java.util.ArrayList;
 import java.util.Scanner;
 
@@ -24,12 +22,7 @@ import java.util.Scanner;
  * JAVA_서울_6반_엄재웅
  */
 
-/*
- * TODO
- * - ArrayList를 이용하여 맞는 줄에 세우면 됨
- */
-
-public class bj2605_Lineup_엄재웅 {
+public class Main {
 	public static void main(String[] args) {
 		Scanner sc = new Scanner(System.in);
 		StringBuilder sb = new StringBuilder();
@@ -56,6 +49,5 @@ public class bj2605_Lineup_엄재웅 {
 		System.out.println(sb);
 	}
 }
-
 ~~~
 
