Modify Solving Algorithm Problem about 일곱 난쟁이

--- a/Baekjoon/21. 일곱 난쟁이.md
+++ b/Baekjoon/21. 일곱 난쟁이.md
@@ -22,12 +22,7 @@ import java.util.Scanner;
  * JAVA_서울_6반_엄재웅
  */
 
-/*
- * TODO
- * - 조합으로 7명을 뽑아서 합이 100이 되면 출력
- */
-
-public class Solution {
+public class Main {
 	private static int[] dwarfs;
 	private static int[] selected;
 	private static boolean isComplete;
