Modify Solving Algorithm Problems to 도영이가 만든 맛있는 음식

--- a/Baekjoon/20. 도영이가 만든 맛있는 음식.md
+++ b/Baekjoon/20. 도영이가 만든 맛있는 음식.md
@@ -36,7 +36,7 @@ import java.util.StringTokenizer;
  *   4. selected된 게 없을 때는 공집합이므로 예외처리 해주기
  */
 
-public class Solution {
+public class Main {
 	private static int N;
 	private static int[][] stuff;
 	private static boolean[] isSelected;
