Modify Solving Algorithm Problems to 숨바꼭질

--- a/Baekjoon/19. 숨바꼭질.md
+++ b/Baekjoon/19. 숨바꼭질.md
@@ -7,6 +7,25 @@
 
 
 
+
+TODO
+
+1. N, K값 입력받기
+
+2. N값을 기준으로 bfs 탐색
+   1. Queue, 방문 탐색 여부를 알 수 있는 boolean Array 생성
+   2. n을 queue에 넣고 방문했다고 표시
+   3. 큐가 빌 때 까지 반복
+      1. 시간을 세기 위해 현재 queue의 size만큼 반복
+      2. 동생을 잡으면 끝
+      3. 술래가 범위 안에 있고 잡히지 않았을 때
+         1. n * 2의 경우(범위 내)를 queue에 삽입후 방문했다고 미리 표시
+         2. n + 1의 경우(범위 내)를 queue에 삽입후 방문했다고 미리 표시
+         3. n - 1의 경우(범위 내)를 queue에 삽입후 방문했다고 미리 표시 
+
+
+
+
 ###### 풀이
 
 ~~~java
@@ -19,22 +38,7 @@ import java.util.Scanner;
  * JAVA_서울_6반_엄재웅
  */
 
-/*
- * TODO
- * 1. N, K값 입력받기
- * 2. N값을 기준으로 bfs 탐색
- *   1. Queue, 방문 탐색 여부를 알 수 있는 boolean Array 생성
- *   2. n을 queue에 넣고 방문했다고 표시
- *   3. 큐가 빌 때 까지 반복
- *     1. 시간을 세기 위해 현재 queue의 size만큼 반복
- *     2. 동생을 잡으면 끝
- *     3. 술래가 범위 안에 있고 잡히지 않았을 때
- *       1. n * 2의 경우(범위 내)를 queue에 삽입후 방문했다고 미리 표시
- *       2. n + 1의 경우(범위 내)를 queue에 삽입후 방문했다고 미리 표시
- *       3. n - 1의 경우(범위 내)를 queue에 삽입후 방문했다고 미리 표시 
- */
-
-public class bj1697_HideAndSeek_엄재웅 {
+public class Main {
 	private static int N, K, count;
 	private final static int FIELD = 100000;
 	
