--- a/Baekjoon/18. 탈출.md
+++ b/Baekjoon/18. 탈출.md
@@ -6,6 +6,16 @@
 
 
 
+나의 풀이
+
+1. R, C 입력 받은 후 R x C크기의 이차원 배열 생성
+
+2. bfs로 시뮬레이션 하면서 고슴도치를 이동시키고, 불을 퍼지게 함
+
+3. 최종적으로 D에 도착하면 횟수를, 도착하지 못하면 문자열 출력
+
+
+
 
 ###### 풀이
 
@@ -22,14 +32,7 @@ import java.util.StringTokenizer;
  * JAVA_서울_6반_엄재웅
  */
 
-/*
- * TODO
- * 1. R, C 입력 받은 후 R x C크기의 이차원 배열 생성
- * 2. bfs로 시뮬레이션 하면서 고슴도치를 이동시키고, 불을 퍼지게 함
- * 3. 최종적으로 D에 도착하면 횟수를, 도착하지 못하면 문자열 출력
- */
-
-public class bj3055_EscapeFromFlame_엄재웅 {
+public class Main {
 	private static int R, C, result;				// R: 행, C: 열
 	private static char[][] map;			// 게임 맵
 	private static int[][] dir = {{-1, 0}, {1, 0}, {0, -1}, {0, 1}};
