Modify Solving Algorithm Problems to 회전 초밥

--- a/Baekjoon/17. 회전 초밥.md
+++ b/Baekjoon/17. 회전 초밥.md
@@ -6,12 +6,22 @@
 
 
 
+###### 나의 풀이
+
+1. N, D, K, 입력을 받고 shusi 배열을 만들어 입력을 받음
+
+2. 0~N-1까지 경우를 따져 초밥을 선택
+   1. 초밥을 선택하며 중복되면 노카운트
+   2. 쿠폰이 포함되지 않으면 +1을 해줌
+
+>  15961에서는 시간초과 난다....
+
+
+
 
 ###### 풀이
 
 ~~~java
-package com.algorithm_0828;
-
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.util.LinkedList;
@@ -22,20 +32,8 @@ import java.util.StringTokenizer;
  * 2531. 회전 초밥
  * JAVA_서울_6반_엄재웅
  */
-
-/*
- * TODO
- * 1. N, D, K, 입력을 받고 shusi 배열을 만들어 입력을 받음
- * 2. 0~N-1까지 경우를 따져 초밥을 선택
- *   1. 초밥을 선택하며 중복되면 노카운트
- *   2. 쿠폰이 포함되지 않으면 +1을 해줌
- */
-
-/*
- * 15961에서는 시간초과 난다....
- */
  
-public class bj2531_Shusi_엄재웅 {
+public class Main {
 	// N : 초밥 벨트에 놓인 접시의 갯수
 	// D : 초밥의 가짓수
 	// K : 연속해서 먹는 접시의 수
