--- a/Baekjoon/16. 미세먼지 안녕!.md
+++ b/Baekjoon/16. 미세먼지 안녕!.md
@@ -6,6 +6,16 @@
 
 
 
+###### 나의 풀이
+
+1. R, C, T 입력 받은 후 이차원 배열의 룸 생성, 공기청정기 위치를 저장할 이차원배열 생성
+
+2. queue를 생성하여 현재 미세먼지가 있는 칸을 모두 넣고 계산값을 4방향으로 퍼뜨린 후 남은 먼지량 계산
+
+3. 공기청정기의 바람의 흐름대로 칸을 이동시켜 줌
+
+
+
 
 ###### 풀이
 
@@ -21,14 +31,7 @@ import java.util.StringTokenizer;
  * JAVA_서울_6반_엄재웅 
  */
 
-/*
- * TODO
- * 1. R, C, T 입력 받은 후 이차원 배열의 룸 생성, 공기청정기 위치를 저장할 이차원배열 생성
- * 2. queue를 생성하여 현재 미세먼지가 있는 칸을 모두 넣고 계산값을 4방향으로 퍼뜨린 후 남은 먼지량 계산
- * 3. 공기청정기의 바람의 흐름대로 칸을 이동시켜 줌
- */
-
-public class bj17144_ByeDust_엄재웅 {
+public class Main {
 	public static void main(String[] args) throws Exception {
 		BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
 		StringTokenizer st = new StringTokenizer(br.readLine(), " ");
