Modify Solving Algorithm Problem 쿼드트리

--- a/Baekjoon/10. 쿼드트리.md
+++ b/Baekjoon/10. 쿼드트리.md
@@ -5,11 +5,19 @@
 > 문제 링크 : https://www.acmicpc.net/problem/1992
 
 
+
+###### 나의 풀이
+
+1. 검사 시작 시 flag(0이면 0, 1이면 1) 설정
+
+2. 검사 중 flag와 다른 수가 나오면 4등분을 하여 검사
+
+
+
+
 ###### 풀이
 
 ~~~java
-package com.algorithm_0825;
-
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
@@ -21,13 +29,7 @@ import java.util.StringTokenizer;
  * JAVA_서울_6반_엄재웅
  */
 
-/*
- * TODO
- * 1. 검사 시작 시 flag(0이면 0, 1이면 1) 설정
- * 2. 검사 중 flag와 다른 수가 나오면 4등분을 하여 검사
- */
-
-public class bj1992_QuadTree_엄재웅 {
+public class Main {
 	private static int N;
 	private static int[][] img;
 	private static StringBuilder sb = new StringBuilder();
