Modify Solving Algorithm Problems about 탑

--- a/Baekjoon/1. 탑.md
+++ b/Baekjoon/1. 탑.md
@@ -6,9 +6,11 @@
 
 
 
+###### 나의 풀이
+
  * 단순 이중 for문으로는 시간초과
  * Stack을 이용하여 해결하여야 한다
- 
+
 
 1. 탑 개수(N) 입력 받기
 
@@ -43,7 +45,7 @@ import java.util.Stack;
  * JAVA_서울_6반_엄재웅
  */
 
-class bj2493_Tower_엄재웅 {
+class Main {
 	public static void main(String[] args) throws Exception{
 		BufferedReader br = new BufferedReader(new InputStreamReader(System.in)); 
 		StringBuilder sb = new StringBuilder();
