Modify Solving Algorithm Problem about Z

--- a/Baekjoon/2. Z.md
+++ b/Baekjoon/2. Z.md
@@ -4,7 +4,19 @@
 
 > 문제 링크 : https://www.acmicpc.net/problem/1074
 
-> 재귀
+
+
+###### 나의 풀이
+
+1. N, Z, r, c 입력받기
+
+2. 배열에 넣을 cnt 선언
+
+3. 배열 순회를 위한 재귀함수 선언
+
+4. 기저조건 n = 1이면 cnt값을 넣고 + 1
+
+5. n = 1이 아니면 Z형식에 따라 N/2사이즈로 4번 재귀를 호출한다
 
 
 
@@ -18,18 +30,8 @@ import java.util.Scanner;
  * JAVA_서울_6반_엄재웅
  */
 
-/*
- * TODO
- * 1. N, Z, r, c 입력받기
- * 2. 배열에 넣을 cnt 선언
- * 3. 배열 순회를 위한 재귀함수 선언
- *   1. 기저조건 n = 1이면 cnt값을 넣고 + 1
- *   2. n = 1이 아니면 Z형식에 따라 N/2사이즈로 4번 재귀를 호출한다
- */
-
-public class bj1074_Z_엄재웅 {
+public class Main {
 	private static int N;
-	// private static int[][] Z;
 	private static int r, c;
 	private static int cnt, answer;
 
@@ -37,7 +39,6 @@ public class bj1074_Z_엄재웅 {
 		Scanner sc = new Scanner(System.in);
 
 		N = (int) Math.pow(2, sc.nextInt());
-		// Z = new int[N][N];
 		r = sc.nextInt();
 		c = sc.nextInt();
 		cnt = 0;
@@ -67,4 +68,3 @@ public class bj1074_Z_엄재웅 {
 	}
 }
 ~~~
-
