Modify Solving Algorithm Problem about 규영이와 인영이의 카드게임

--- a/SW Expert Academy/1. 규영이와 인영이의 카드게임.md
+++ b/SW Expert Academy/1. 규영이와 인영이의 카드게임.md
@@ -6,6 +6,20 @@
 
 
 
+###### 나의 풀이
+
+1. 규영이의 덱을 입력 받은 후 오름차순으로 정렬
+
+2. 인영이의 덱은 규영이가 가지지 않은 덱으로 채워 줌
+
+3. 9라운드에 걸쳐 시합을 진행
+
+4. 뽑은 카드를 비교하여 높은 사람에게 점수 적립
+
+5. 최종 점수로 승패 계산
+
+
+
 ###### 풀이
 
 ~~~java
@@ -16,15 +30,6 @@ import java.util.StringTokenizer;
 
 /*
  * 6808. 규영이와 인영이의 카드게임
- */
-
-/*
- * TODO
- * 1. 규영이의 덱을 입력 받은 후 오름차순으로 정렬
- * 2. 인영이의 덱은 규영이가 가지지 않은 덱으로 채워 줌
- * 3. 9라운드에 걸쳐 시합을 진행
- * 4. 뽑은 카드를 비교하여 높은 사람에게 점수 적립
- * 5. 최종 점수로 승패 계산
  */
 
 public class Solution {
@@ -74,9 +79,6 @@ public class Solution {
 				// 인영이 카드덱에 넣어준다
 				if(!isExist) 	inyoung[idxI++] = i;
 			}
-			
-//			System.out.println(Arrays.toString(kuyoung));
-//			System.out.println(Arrays.toString(inyoung));
 			
 			// 순열로 9가지 카드경우를 뽑아서 게임을 진행
 			Perm(0);
