Modify Solving Algorithm Problem about 평탄화

--- a/SW Expert Academy/2. 평탄화.md
+++ b/SW Expert Academy/2. 평탄화.md
@@ -6,17 +6,20 @@
 
 
 
+###### 나의 풀이
+
+ * 평탄화 : 최고점과 최저점의 간격을 줄이는 작업
+
+    1. 주어진 덤프 횟수만큼 실행 후
+
+    2. 최고점과 최저점의 높이 차를 출력한다.
+       
+
 ###### 풀이
 
 ~~~java
 import java.util.Arrays;
 import java.util.Scanner;
-
-/*
- * 평탄화 : 최고점과 최저점의 간격을 줄이는 작업
- * 주어진 덤프 횟수만큼 실행 후
- * 최고점과 최저점의 높이 차를 출력한다.
- */
 
 /*
  * 1208. [S/W 문제해결 기본] 1일차 - Flatten
