Add Algorithm solving problem about 달팽이 숫자

--- a/SW Expert Academy/3. 달팽이 숫자.md
+++ b/SW Expert Academy/3. 달팽이 숫자.md
@@ -16,7 +16,7 @@ import java.util.Scanner;
  * JAVA_서울_6반_엄재웅
  */
 
-public class SnailArray_sw_0728 {
+public class Solution{
 	public static void main(String args[]) throws Exception
 	{
 		Scanner sc = new Scanner(System.in);
