Modify Algorithm solving problem about 사칙연산 유효성 검사

--- a/SW Expert Academy/4. 사칙연산 유효성 검사.md
+++ b/SW Expert Academy/4. 사칙연산 유효성 검사.md
@@ -6,6 +6,31 @@
 
 
 
+###### 나의 풀이
+
+1. 테스트케이스(10) 동안 실행
+
+2. 완전이진트리를 위한 String 배열, 계산을 위한 Stack배열 2개 생성
+
+3. 노드 갯수 N, tree 배열 N + 1 생성
+
+4. 연산자, 피연산자 스택 초기화
+
+5. 노드 입력
+
+6. DFS를 돌며 계산(루트노드부터)
+
+   1. 후위순회를 하며 끝까지 들어감
+
+   2. 숫자인 경우에는 Push
+
+   3. 연산자인 경우에는 연산자를 push 후 피연산자 스택 배열이 2개 이상 있을 때 뽑아서 계산
+
+      (편의를 위해 그냥 pop을 두번 후 연산자도 pop후 계산했다 가정하고 피연산자를 "1"로 정해 다시 스택에 넣음)
+
+7. 최종 계산 결과(피연산자 스택에 최종 결과값이 있으면 1, 연산자 스택은 비어있어야 한다)가 있다면 1, 아니면 0을 출력
+   
+
 ###### 풀이
 
 ~~~java
@@ -16,21 +41,6 @@ import java.util.Stack;
 /*
  * 1233. 사칙연산 유효성 검사
  * JAVA_서울_6반_엄재웅
- */
-
-/*
- * TODO
- * 1. 테스트케이스(10) 동안 실행
- * 2. 완전이진트리를 위한 String 배열, 계산을 위한 Stack배열 2개 생성
- * 3. 노드 갯수 N, tree 배열 N + 1 생성
- * 4. 연산자, 피연산자 스택 초기화
- * 5. 노드 입력
- * 6. DFS를 돌며 계산(루트노드부터)
- *   1. 후위순회를 하며 끝까지 들어감
- *   2. 숫자인 경우에는 Push
- *   3. 연산자인 경우에는 연산자를 push 후 피연산자 스택 배열이 2개 이상 있을 때 뽑아서 계산
- *   	(편의를 위해 그냥 pop을 두번 후 연산자도 pop후 계산했다 가정하고 피연산자를 "1"로 정해 다시 스택에 넣음)
- * 7. 최종 계산 결과(피연산자 스택에 최종 결과값이 있으면 1, 연산자 스택은 비어있어야 한다)가 있다면 1, 아니면 0을 출력
  */
 	
 public class Solution {
@@ -89,6 +99,5 @@ public class Solution {
 		}
 	}
 }
-
 ~~~
 
