--- a/SW Expert Academy/5. Contact.md
+++ b/SW Expert Academy/5. Contact.md
@@ -6,6 +6,27 @@
 
 
 
+###### 나의 풀이
+
+1. N과 시작 노드값 입력받음
+
+2. 인접행렬, 방문했는지의 여부를 표시하는 배열 생성 후 값 입력받기
+
+3. 너비 우선 탐색을 하며 최대값을 찾기
+
+   ​	1. 너비우선탐색을 위핸 queue 생성
+
+   2. start값을 queue에 넣고 방문배열에 start인덱스에 방문했다고 표시
+
+   3. 큐가 비지않는동안 반복
+
+      1. 연락 순서대로 반복(for)
+
+      2. 방문해야 할 노드가 있으면 큐에 넣고 visited에 표시
+
+      3. 해당 레벨의 최대값을 max에 넣음
+         
+
 ###### 풀이
 
 ~~~java
@@ -18,20 +39,7 @@ import java.util.Scanner;
  * JAVA_서울_6반_엄재웅
  */
 
-/*
- * TODO
- * 1. N과 시작 노드값 입력받음
- * 2. 인접행렬, 방문했는지의 여부를 표시하는 배열 생성 후 값 입력받기
- * 3. 너비 우선 탐색을 하며 최대값을 찾기
- *   1. 너비우선탐색을 위핸 queue 생성
- *   2. start값을 queue에 넣고 방문배열에 start인덱스에 방문했다고 표시
- *   3. 큐가 비지않는동안 반복
- *     1. 연락 순서대로 반복(for)
- *     2. 방문해야 할 노드가 있으면 큐에 넣고 visited에 표시
- *     3. 해당 레벨의 최대값을 max에 넣음
- */
-
-public class sw1238_Contact_엄재웅 {
+public class Solution {
 	private static int N;
 	private static boolean[][] contact;
 	private static boolean[] visited;
