Modify Algorithm solving problem about 서로소 집합

--- a/SW Expert Academy/6. 서로소 집합.md
+++ b/SW Expert Academy/6. 서로소 집합.md
@@ -6,6 +6,33 @@
 
 
 
+###### 나의 풀이
+
+1. 테스트케이스 입력 받기
+
+2. N, M 입력 받기
+
+3. parents 배열에 n개의 집합 생성
+
+4. M만큼 돌며 처리
+
+   1. command == 0
+
+      1. 합집합 만들기 시행
+
+         ​	1. parent의 root를 찾음(없으면 자기 자신)
+
+         2. 두 값이 같으면 false(포함되어 있음)
+         3. 두 값이 다르면 큰 값의 인덱스 값에 부모 값을 넣음
+
+   2. command == 1
+      1. 같은 합집합인지 찾기
+         * 입력 받은 두 값중 하나를 찾아 같은 값이 나오면 같은 집합에 있음
+         * 집합에 자기 자신만 있으면 자기를 리턴
+         * 그렇지 않으면 부모 값을 줘서 다시 찾기 시도
+
+
+
 ###### 풀이
 
 ~~~java
@@ -14,24 +41,6 @@ import java.util.Scanner;
 /*
  * 3289. 서로소집합
  * JAVA_서울_6반_엄재웅
- */
-
-/*
- * TODO
- * 1. 테스트케이스 입력 받기
- * 2. N, M 입력 받기
- * 3. parents 배열에 n개의 집합 생성
- * 4. M만큼 돌며 처리
- *   1. command == 0
- *     1. 합집합 만들기 시행
- *       1. parent의 root를 찾음(없으면 자기 자신)
- *       2. 두 값이 같으면 false(포함되어 있음)
- *       3. 두 값이 다르면 큰 값의 인덱스 값에 부모 값을 넣음
- *   2. command == 1
- *     2. 같은 합집합인지 찾기
- *       입력 받은 두 값중 하나를 찾아 같은 값이 나오면 같은 집합에 있음
- *       집합에 자기 자신만 있으면 자기를 리턴
- *       그렇지 않으면 부모 값을 줘서 다시 찾기 시도
  */
 
 public class Solution {
