Modify Algorithm solving problem about 최소 스패닝 트리

--- a/SW Expert Academy/7. 최소 스패닝 트리.md
+++ b/SW Expert Academy/7. 최소 스패닝 트리.md
@@ -6,6 +6,22 @@
 
 
 
+###### 나의 풀이
+
+1. 출발, 도착, 가중치를 가지는 class 선언
+
+   comparable을 implements하여 비교 가능하게 만듦
+
+2. V, E 입력받고 Edge 배열, 서로소 집합 배열 생성 후 입력 받기
+
+3. 전체 노드를 반복하여 돈다
+   1. union == true이다 (사이클이 생성되지 않는다)
+
+      1. 결과에 가중치를 더함
+
+      2. count + 1 이 간선의 값 - 1 과 같으면(다 돌았을 때) 탈출
+         
+
 ###### 풀이
 
 ~~~java
@@ -15,17 +31,6 @@ import java.util.Scanner;
 /*
  * 3124. 최소 스패닝 트리
  * JAVA_서울_6반_엄재웅
- */
-
-/*
- * TODO
- * 1. 출발, 도착, 가중치를 가지는 class 선언
- *    comparable을 implements하여 비교 가능하게 만듦
- * 2. V, E 입력받고 Edge 배열, 서로소 집합 배열 생성 후 입력 받기
- * 3. 전체 노드를 반복하여 돈다
- *   1. union == true이다 (사이클이 생성되지 않는다)
- *     1. 결과에 가중치를 더함
- *     2. count + 1 이 간선의 값 - 1 과 같으면(다 돌았을 때) 탈출
  */
 
 public class Solution {
