Modify Algorithm solving problem about 원재의 메모리 복구하기

--- a/SW Expert Academy/8. 원재의 메모리 복구하기.md
+++ b/SW Expert Academy/8. 원재의 메모리 복구하기.md
@@ -6,6 +6,14 @@
 
 
 
+###### 나의 풀이
+
+1. 입력값이 바뀌는 부분을 체크해서 카운트하면 된다
+   1. 처음값이 0, 1인지 판단
+   2. 다음 값들을 검사하면서 체크한 값과 다르면 카운트
+
+
+
 ###### 풀이
 
 ~~~java
@@ -22,11 +30,13 @@ public class Solution {
 		int caseCnt = sc.nextInt();
 		int answer;
 		
+        // 테스트 케이스
 		for(int cnt = 0; cnt < caseCnt; cnt++) {
 			String memoryStr = sc.next();
 			char target = memoryStr.charAt(0);
 			answer = target == '0'? 0 : 1;
-
+			
+            // 앞쪽부터 숫자가 달라지는지 검사
 			for(int i = 1; i < memoryStr.length(); i++) {
 				char examine = memoryStr.charAt(i);
 				if(examine != target) {
