Modify Algorithm solving problem about 괄호 짝짓기

--- a/SW Expert Academy/9. 괄호 짝짓기.md
+++ b/SW Expert Academy/9. 괄호 짝짓기.md
@@ -6,6 +6,26 @@
 
 
 
+###### 나의 풀이
+
+1.  테스트 케이스만큼 반복
+
+2. 스택 생성
+
+3. 테스트케이스 길이, 테스트 케이스 입력 받기
+
+4. 테스트 케이스 길이만큼 반복
+
+   1.  스택이 비었으면 스택에 넣고
+
+   2. 스택이 비어있지 않으면 peek로 검사하여 짝이 맞는지 확인
+
+   3. 짝이 맞으면 pop시킴 
+
+   4. 짝이 맞지 않으면 0
+
+
+
 ###### 풀이
 
 ~~~java
@@ -17,17 +37,7 @@ import java.util.Stack;
  * JAVA_서울_6반_엄재웅
  */
 
-/* TODO
- * 1. 테스트 케이스만큼 반복
- * 2. 스택 생성
- * 3. 테스트케이스 길이, 테스트 케이스 입력 받기
- * 4. 테스트 케이스 길이만큼 반복
- * 5-1. 스택이 비었으면 스택에 넣고
- * 5-2. 스택이 비어있지 않으면 peek로 검사하여 짝이 맞는지 확인
- * 6-1. 짝이 맞으면 pop시킴 
- * 6-2. 짝이 맞지 않으면 0
- */
-public class sw1218_Bracket_엄재웅 {
+public class Solution {
 	public static void main(String args[]) throws Exception
 	{
 		// BufferedReader br = new BufferedReader(new InputStreamReader(System.in));	// 큰걸 받을때는 이걸로 해야함
