Modify Algorithm solving problem about 정식이의 은행업무

--- a/SW Expert Academy/11. 정식이의 은행업무.md
+++ b/SW Expert Academy/11. 정식이의 은행업무.md
@@ -6,6 +6,8 @@
 
 
 
+###### 나의 풀이
+
 1. 입력 받은 값을 숫자 배열로 변환 후
 
 2. 앞쪽부터 탐색하며 경우를 따져가며 수를 바꾼다
@@ -23,7 +25,7 @@ import java.util.Scanner;
  * JAVA_서울_6반_엄재웅
  */
 
-public class sw4366_BankJob_엄재웅 {
+public class Solution {
 	private static int[] num2;
 	private static int[] num3;
 	
