Modify Algorithm solving problem about 프로세서 연결하기

--- a/SW Expert Academy/12. 프로세서 연결하기.md
+++ b/SW Expert Academy/12. 프로세서 연결하기.md
@@ -6,6 +6,8 @@
 
 
 
+###### 나의 풀이
+
 1. 프로세서 위치를 파악함
 2. 일단 갈 수 있는 모든 경우에 전선을 놓아봄
 3. 전선을 계산해 본 후 max값 보다 크면 채택
@@ -26,7 +28,7 @@ import java.util.StringTokenizer;
  * JAVA_서울_6반_엄재웅
  */
 
-public class sw1767_ConnectProcessor_엄재웅 {
+public class Solution {
 	private static int N, result, coreLen;
 	private static int[][] maxi;
 	// 4방향
