--- a/SW Expert Academy/13. 음식배달.md
+++ b/SW Expert Academy/13. 음식배달.md
@@ -21,8 +21,6 @@
 - ArrayList로 풀이
 
 ~~~java
-package com.algorithm.problem;
-
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.util.ArrayList;
@@ -33,7 +31,7 @@ import java.util.StringTokenizer;
  * JAVA_서울_6반_엄재웅
  */
 
-public class sw10888_FoodDelivery_엄재웅 {
+public class Solution {
 	private static boolean[] selected;
 	private static ArrayList<int[]> home, store;
 	private static int min;
