--- a/programmers/1. 짝수와홀수.md
+++ b/programmers/1. 짝수와홀수.md
@@ -2,16 +2,18 @@
 
 ### 짝수와 홀수
 
-> 정수 num이 짝수일 경우 "Even"을 반환하고 홀수인 경우 "Odd"를 반환하는 함수, solution을 완성해주세요.
->
 > 문제 링크 : https://programmers.co.kr/learn/courses/30/lessons/12937?language=cpp
 
 
 
-###### 풀이
+###### 나의 풀이
 
 * 짝수와 홀수의 경우를 나누어서 정해진 문자열을 출력 시키면 된다	
 
+  
+  
+  > C++
+  
   ```c++
   #include <string>
   #include <vector>
@@ -22,12 +24,14 @@
       string answer = "";
       
       answer = num % 2 == 0? "Even" : "Odd";
-      
+    
       return answer;
   }
   ```
-
   
+  
+  
+  > Python
   
   ```python
   def solution(num):
