Modify Algorithm solving problem about 같은 숫자는 싫어

--- a/programmers/16. 같은 숫자는 싫어.md
+++ b/programmers/16. 같은 숫자는 싫어.md
@@ -6,10 +6,12 @@
 
 
 
-###### 풀이
+###### 나의풀이
 
 * 직전의 값이 중복되면 넣지 않으면 된다
 
+  
+  
   ```c++
   #include <vector>
   #include <iostream>
@@ -32,9 +34,9 @@
       // answer = arr;
       
       return answer;
-  }
+}
   ```
-
+  
   
   
   ```python
