Modify Algorithm solving problem about 수박수박수박수박수박수

--- a/programmers/22. 수박수박수박수박수박수.md
+++ b/programmers/22. 수박수박수박수박수박수.md
@@ -6,10 +6,12 @@
 
 
 
-###### 풀이
+###### 나의 풀이
 
 * 짝수일 때 '수', 홀수일때'박'을 문자열에 더해주면 된다
 
+  > c++
+  
   ```c++
   #include <string>
   #include <vector>
@@ -27,8 +29,10 @@
       return answer;
   }
   ```
-
   
+  
+  
+  > python
   
   ```python
   def solution(n):
