--- a/programmers/24. 서울에서 김서방 찾기.md
+++ b/programmers/24. 서울에서 김서방 찾기.md
@@ -6,10 +6,14 @@
 
 
 
-###### 풀이
+###### 나의 풀이
 
 * 배열에 있는 "Kim"을 찾으면 됨
 
+  
+  
+  > C++
+  
   ```c++
   #include <string>
   #include <vector>
@@ -28,8 +32,10 @@
       return answer;
   }
   ```
-
   
+  
+  
+  > Python
   
   ```python
   def solution(seoul):
