--- a/programmers/25. 문자열 내림차순으로 배치하기.md
+++ b/programmers/25. 문자열 내림차순으로 배치하기.md
@@ -6,10 +6,14 @@
 
 
 
-###### 풀이
+###### 나의 풀이
 
-* 정렬하면 됨
+* 정렬 함수로 정렬하면 됨
 
+  
+  
+  > C++
+  
   ```c++
   #include <string>
   #include <vector>
@@ -27,8 +31,10 @@
   
   }
   ```
-
   
+  
+  
+  > Python
   
   ```python
   def solution(s):
