--- a/programmers/26. 문자열 내 마음대로 정렬하기.md
+++ b/programmers/26. 문자열 내 마음대로 정렬하기.md
@@ -6,11 +6,15 @@
 
 
 
-###### 풀이
+###### 나의 풀이
 
 * n번의 알파벳 크기대로 정렬
 * 만약 같다면 사전 순으로 정렬 시키면 된다
 * 나는 값을 비교하여 바꾸는 정렬과 sort() 사용
+
+
+
+> c++
 
 ```c++
 // 값을 비교하여 바꾸는 정렬
@@ -45,6 +49,8 @@ vector<string> solution(vector<string> strings, int n) {
 ```
 
 
+
+> Python
 
 ```c++
 // sort 사용
