Modify Algorithm solving problem about 가운데 글자 가져오기

--- a/programmers/27. 가운데 글자 가져오기.md
+++ b/programmers/27. 가운데 글자 가져오기.md
@@ -6,10 +6,14 @@
 
 
 
-###### 풀이
+###### 나의 풀이
 
 * 문자열의 길이를 나누어 짝수이면 (n/2 - 1, n/2)의 substring을, 홀수이면 n/2의 substring을 가져오면 된다
 
+  
+  
+  > C++
+  
   ```c++
   #include <string>
   #include <vector>
@@ -26,8 +30,10 @@
       return answer;
   }
   ```
-
   
+  
+  
+  > Python
   
   ```python
   def solution(s):
