[FIX] modify Algorithm solving problem about 시저 암호

--- a/programmers/28. 시저 암호.md
+++ b/programmers/28. 시저 암호.md
@@ -6,12 +6,16 @@
 
 
 
-###### 풀이
+###### 나의 풀이
 
 * 각 문자에 n을 + 해줌(아스키코드표에 보면 a~z, A~Z는 연결된 숫자이다)
 
 * z, Z를 넘어 설 경우는 26을 빼주면 된다(알파벳 26개)
 
+  
+  
+  > C++
+  
   ```c++
   #include <string>
   #include <vector>
@@ -34,8 +38,10 @@
       return answer;
   }
   ```
-
   
+  
+  
+  > Python
   
   ```python
   def solution(s, n):
