[EDIT] Modify Algorithm solving problem about 2016년

--- a/programmers/29. 2016년.md
+++ b/programmers/29. 2016년.md
@@ -6,7 +6,7 @@
 
 
 
-###### 풀이
+###### 나의 풀이
 
 * 1, 3, 5, 7, 8, 10월을 지나면 31을 더함
 
@@ -16,6 +16,10 @@
 
 * 월을 더한 값에 일을 더하여 하루를 뺀 후 7로 나누면 금요일에서 몇일을 가야되는지의 값이 나온다
 
+  
+  
+  > c++
+  
   ```c++
   #include <string>
   #include <vector>
@@ -46,12 +50,14 @@
           case 5 :    answer = "WED"; break;
           case 6 :    answer = "THU"; break;
           default :   answer = "???";
-      }
+    }
       return answer;
   }
   ```
-
   
+  
+  
+  > Python
   
   ```python
   def solution(a, b):
