--- a/programmers/30. K번째수.md
+++ b/programmers/30. K번째수.md
@@ -6,10 +6,14 @@
 
 
 
-###### 풀이
+###### 나의 풀이
 
 * 배열을 위치에 맞게 자른 후, 정렬하여, K번째의 수를 골라서 정답에 차곡차곡 넣으면 된다
 
+  
+  
+  > C++
+  
   ```c++
   #include <string>
   #include <vector>
@@ -33,8 +37,10 @@
       return answer;
   }
   ```
-
   
+  
+  
+  > Python
   
   ```python
   def solution(array, commands):
