--- a/programmers/31. 완주하지 못한 선수.md
+++ b/programmers/31. 완주하지 못한 선수.md
@@ -6,60 +6,65 @@
 
 
 
-###### 풀이
+###### 나의 풀이
 
 * 두 배열을 정렬한 후 같은 자리의 값을 비교하여 다른 것이 나오면 완주하지 못한 선수가 된다
-
 * 하나하나 검사하면서 찾아낼 수도 있지만 효율성 테스트에서 실패....
 
-  ```c++
-  #include <string>
-  #include <vector>
-  #include <algorithm>
-  
-  using namespace std;
-  
-  string solution(vector<string> participant, vector<string> completion) {
-      string answer = "";
-      
-      sort(participant.begin(), participant.end());
-      sort(completion.begin(), completion.end());
-      
-      for(int i = 0; i < participant.size(); i++){
-          if(participant[i] != completion[i]){
-              answer = participant[i];
-              break;
-          }
-      }
-       
-      return answer;
-  }
-  ```
 
-  
 
-  ```python
-  def solution(participant, completion):
-      participant = sorted(participant)
-      completion = sorted(completion)
-      
-      for i in range(0, len(completion)) :
-          if participant[i] != completion[i] :
-              return participant[i]
-      
-      return participant[-1]
-  ```
-  
-  파이썬도 마찬가지로 
-  
-  ```python
-  def solution(participant, completion):
-      for e in completion :
-          if e in participant :
-              participant.remove(e)
-              continue
-      
-      return participant[0]
-  ```
-  
-  하나하나 요소를 검사하며 제거하니 효율성에서 실패가 난다
+> c++
+
+```c++
+#include <string>
+#include <vector>
+#include <algorithm>
+
+using namespace std;
+
+string solution(vector<string> participant, vector<string> completion) {
+    string answer = "";
+    
+    sort(participant.begin(), participant.end());
+    sort(completion.begin(), completion.end());
+    
+    for(int i = 0; i < participant.size(); i++){
+        if(participant[i] != completion[i]){
+            answer = participant[i];
+            break;
+        }
+    }
+     
+    return answer;
+}
+```
+
+
+
+> Python
+
+```python
+def solution(participant, completion):
+    participant = sorted(participant)
+    completion = sorted(completion)
+    
+    for i in range(0, len(completion)) :
+        if participant[i] != completion[i] :
+            return participant[i]
+    
+    return participant[-1]
+```
+
+파이썬도 마찬가지로 
+
+```python
+def solution(participant, completion):
+    for e in completion :
+        if e in participant :
+            participant.remove(e)
+            continue
+    
+    return participant[0]
+```
+
+하나하나 요소를 검사하며 제거하니 효율성에서 실패가 난다
