--- a/programmers/32. 직사각형 별찍기.md
+++ b/programmers/32. 직사각형 별찍기.md
@@ -6,12 +6,16 @@
 
 
 
-###### 풀이
+###### 나의 풀이
 
 * 일반적으로는 for문 2개로 별찍기를 하면 된다(내부에서는 *, 한단계 밖에서는 \n)
 
 * for문 복잡도를 줄이기 위해 미리 별의 갯수만큼의 string을 만들어서 반복하여 찍었다
 
+  
+  
+  > C++
+  
   ```c++
   #include <iostream>
   #include <string>
@@ -35,8 +39,10 @@
       return 0;
   }
   ```
-
   
+  
+  
+  > Python
   
   ```python
   a, b = map(int, input().strip().split(' '))
