[EDIT] Modify Algorithm solving problem about 예산

--- a/programmers/34. 예산(Summer,Winter Coding 2018).md
+++ b/programmers/34. 예산(Summer,Winter Coding 2018).md
@@ -6,12 +6,16 @@
 
 
 
-###### 풀이
+###### 나의 풀이
 
 * 부서별로 최대한 많이 지원해 주려면 작은 예산부터 차근차근 주면 최대로 지원이 가능하다
 
 * 배열을 오름차순으로 정렬시켜서 지원하면 가장 많은 예산 지원이 가능
 
+  
+  
+  > C++
+  
   ```c++
   #include <iostream>
   #include <stdio.h>
@@ -40,8 +44,10 @@
       return answer;
   }
   ```
-
   
+  
+  
+  > Python
   
   ```python
   def solution(d, budget):
