[EDIT] Modify Algorithm solving problem about 크레인 인형뽑기 게임

--- a/programmers/35. 크레인 인형뽑기 게임(2019 카카오 개발자 겨울 인턴십).md
+++ b/programmers/35. 크레인 인형뽑기 게임(2019 카카오 개발자 겨울 인턴십).md
@@ -6,12 +6,16 @@
 
 
 
-###### 풀이
+###### 나의 풀이
 
 * 주어진 move만큼 크레인을 내리게하여 로직을 처리하면 됨
 
 * 인형을 담는 바구니는 stack을 사용
 
+  
+  
+  > C++
+  
   ```c++
   #include <string>
   #include <vector>
@@ -51,8 +55,10 @@
       return answer;
   }
   ```
-
   
+  
+  
+  > Python
   
   ```python
   def solution(board, moves):
