[EDIT] Modify Algorithm solving problem about 가장 큰 수

--- a/programmers/코딩테스트 고득점 Kit/정렬/2. 가장 큰 수.md
+++ b/programmers/코딩테스트 고득점 Kit/정렬/2. 가장 큰 수.md
@@ -14,10 +14,14 @@
 
   앞에서부터 비교하다 다른 문자열이 나오면 'a-b' 순서로 해당 문자의 아스키코드 값을 뺀 결과(int)를 리턴
 
-  따라서 s2+s1과 s1+s2를 비교하면 됨
+  즉 앞에서부터 비교하여서 문자열이 같으면 문자열의 길이 차이를 리턴
 
+  ​     첫번째부터 문자가 다르면 아스키코드의 차이값을 리턴해 준다
+
+  따라서 s2+s1과 s1+s2를 비교하면 됨(다른 부분의 아스키코드의 차이값을 반환해 주므로)
   
-
+  
+  
   ```java
   import java.util.*;
   
@@ -46,7 +50,7 @@
       }
   }
   ```
-
   
-
+  
+  
   
